--- a/styles/index.css
+++ b/styles/index.css
@@ -60,11 +60,10 @@ header {
   background-color: rgba(255, 144, 14, 0.1);
   padding: 60px 0;
 }
-
 .banner-container {
   text-align: center;
 }
-
 .banner-image img {
   width: 80%;
 }
+/* <!-- Section-2 Feature Section --> */
