--- a/styles/index.css
+++ b/styles/index.css
@@ -12,6 +12,7 @@ h1 {
 h2 {
   font-size: 45px;
   font-weight: 700;
+  margin-bottom: 30px;
 }
 h3 {
   font-weight: 600;
@@ -22,6 +23,7 @@ p {
   font-weight: 400;
   font-size: 16px;
   margin-bottom: 20px;
+  line-height: 25px;
 }
 button {
   color: white;
@@ -31,11 +33,12 @@ button {
   padding: 20px 30px;
   border: 0;
   border-radius: 5px;
-  margin: 30px;
+  margin: 30px 0;
 }
 .container {
   max-width: 1440px;
   margin: auto;
+  border: 1px solid red;
 }
 /* <!-- Nav-menu section --> */
 header {
@@ -67,3 +70,24 @@ header {
   width: 80%;
 }
 /* <!-- Section-2 Feature Section --> */
+
+.team-info {
+  display: flex;
+  padding: 60px 0;
+  align-items: center;
+}
+.Team-images {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.team-content {
+  width: 500px;
+  padding-left: 60px;
+}
+.gray-font {
+  color: #727272;
+}
+.orange-font {
+  color: #ff900e;
+}
