--- a/styles/index.css
+++ b/styles/index.css
@@ -25,6 +25,9 @@ p {
   margin-bottom: 20px;
   line-height: 25px;
 }
+.B {
+  border: 1px solid red;
+}
 button {
   color: white;
   background-color: #ff900e;
@@ -62,8 +65,6 @@ header {
 .banner {
   background-color: rgba(255, 144, 14, 0.1);
   padding: 60px 0;
-}
-.banner-container {
   text-align: center;
 }
 .banner-image img {
@@ -75,6 +76,7 @@ header {
   display: flex;
   padding: 60px 0;
   align-items: center;
+  justify-content: center;
 }
 .Team-images {
   display: grid;
@@ -90,4 +92,38 @@ header {
 }
 .orange-font {
   color: #ff900e;
+}
+/* <!-- section-3 feature list --> */
+
+.feature-list .container {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  justify-content: space-between;
+}
+
+.feature-tittle {
+  padding-left: 20px;
+  border-left: 3px solid #ff900e;
+}
+.feature-items {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.item {
+  width: 600px;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+}
+.feature-image {
+  text-align: center;
+}
+.feature-image img {
+  width: 85%;
+}
+.xp {
+  margin-top: -200px;
 }
